--- a/countries.html
+++ b/countries.html
@@ -11,25 +11,27 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "EducationalOrganization",
-    "name": "Zhev Education Abroad Consultancy – Study Destinations",
-    "url": "https://zheveducation.com/countries.html",
-    "description": "Study abroad guidance for USA, UK, Canada, Australia, Ireland, Europe, and the Middle East with programs like MS in CS, MBA, MBBS, Architecture, Fashion, Game Design, Sports Science, Music, Aviation, Hospitality & more.",
-    "areaServed": [
-      "USA", "Canada", "UK", "Ireland", "Australia", "New Zealand",
-      "Germany", "France", "Italy", "Netherlands", "Spain", "Sweden",
-      "Finland", "Denmark", "Czech Republic", "Poland",
-      "UAE", "Qatar", "Saudi Arabia"
-    ]
+    "@type": ["ContactPage", "EducationalOrganization"],
+    "name": "Zhev Education Abroad Consultancy",
+    "url": "https://zheveducation.com/contact.html",
+    "description": "Contact Zhev Education for admissions, SOP/LOR drafting, university shortlisting, visa guidance, scholarship assistance, and personalised study abroad planning.",
+    "telephone": "+91-9594538979",
+    "email": "info@zheveducation.com",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Mumbai",
+      "addressRegion": "Maharashtra",
+      "addressCountry": "IN"
+    }
   }
   </script>
 
-  <link rel="canonical" href="https://zheveducation.com/countries.html">
+  <link rel="canonical" href="https://zheveducation.com/contact.html">
 
   <!-- SEO -->
-  <title>Study Abroad Destinations – USA, Canada, UK, Europe & Middle East</title>
-  <meta name="description" content="Explore top study abroad countries including USA, UK, Canada, Australia, Ireland, Europe and Middle East. Programs include MS in CS, MBA, MBBS, Data Science, Architecture, Fashion, Hospitality, Sports, Game Design and more.">
-  <meta name="keywords" content="study abroad countries, Europe study, USA universities, Canada PR study, MBBS abroad, fashion design abroad, game design programs, hospitality abroad, Middle East education">
+  <title>Contact Zhev Education – Study Abroad Counselling in India</title>
+  <meta name="description" content="Get in touch with Zhev Education for personalised study abroad guidance for USA, UK, Canada, Australia, Ireland, Europe & Middle East. Admissions, SOP/LOR, visa assistance and scholarships.">
+  <meta name="keywords" content="contact study abroad consultants, zhev education contact, overseas education mumbai, visa support, admission help">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -64,21 +66,21 @@
     .hamburger {
       display: none;
       font-size: 30px;
-      color: white;
       cursor: pointer;
+      color: white;
     }
 
     /* CONTENT */
     section {
       padding: 30px 20px;
-      max-width: 1000px;
+      max-width: 900px;
       margin: auto;
     }
 
     h2 {
       color: #2F3A56;
       font-size: 28px;
-      margin-bottom: 12px;
+      margin-bottom: 10px;
     }
 
     p, ul {
@@ -91,10 +93,23 @@
       margin-bottom: 8px;
     }
 
-    /* GRID */
+    /* CONTACT BOX */
+    .contact-box {
+      background: #F5F7FC;
+      padding: 25px;
+      border-radius: 8px;
+      border: 1px solid #E5E7EB;
+      margin-top: 20px;
+    }
+
+    .contact-box p strong {
+      color: #2F3A56;
+    }
+
+    /* GRID FOR TESTIMONIALS */
     .grid {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(3,1fr);
       gap: 15px;
       margin-top: 20px;
     }
@@ -128,8 +143,8 @@
         display: none;
         flex-direction: column;
         background: #2F3A56;
-        width: 100%;
         padding: 10px;
+        width: 100%;
       }
 
       nav a {
@@ -172,65 +187,35 @@
 
 <!-- MAIN CONTENT -->
 <section>
-  <h2>Study in USA</h2>
+  <h2>Contact Us</h2>
   <p>
-    The USA offers globally recognized degrees and strong STEM pathways such as Computer Science, 
-    Data Science, Artificial Intelligence, Robotics, Cybersecurity, Engineering and Business. 
-    Popular programs include MBA, Music Production, Film, Sports Management, Hospitality, Fashion and Game Design.
-    OPT/CPT options allow international students to gain valuable work experience.
+    Whether you're planning to study in the USA, UK, Canada, Australia, Ireland, Europe or the Middle East,
+    Zhev Education is here to guide you with transparent and personalised counselling.
   </p>
 
-  <h2>Study in Canada</h2>
-  <p>
-    Canada is known for high-quality education, PR pathways, and co-op programs. Popular programs include 
-    Data Analytics, Nursing, Cloud Computing, Architecture, Culinary Arts, Early Childhood Education, 
-    Hospitality and MBA. Affordable tuition and strong job markets make it a top choice.
-  </p>
+  <!-- CONTACT INFO BOX -->
+  <div class="contact-box">
+    <p><strong>Email:</strong> <a href="mailto:info@zheveducation.com">info@zheveducation.com</a></p>
+    <p><strong>Phone:</strong> +91 95945 38979</p>
+    <p><strong>Location:</strong> Mumbai, Maharashtra, India</p>
+    <p><strong>Working Hours:</strong> Monday – Saturday, 10 AM to 10 PM</p>
+  </div>
+</section>
 
-  <h2>Study in UK & Ireland</h2>
-  <p>
-    The UK offers 1-year Masters programs with excellent academic reputation. Popular courses include 
-    Management, Engineering, Finance, Healthcare, Fashion, Film and Hospitality.  
-    Ireland is ideal for technology careers — Software Engineering, AI, Cybersecurity, Pharmaceuticals 
-    and more — with a 2-year post-study work visa.
-  </p>
-
-  <h2>Study in Australia & New Zealand</h2>
-  <p>
-    These destinations offer strong PR options and excellent education in Nursing, Sports Science, 
-    Aviation, Architecture, Marine Science, IT, Healthcare and Business.  
-    Safe campuses, internship opportunities and high living standards attract students worldwide.
-  </p>
-
-  <h2>Study in Europe (Germany, France, Italy, Netherlands & more)</h2>
-  <p>
-    Europe offers affordable or free education in many countries.  
-    Germany excels in Engineering, Robotics, Mechanical, Automotive and CS.  
-    France is famous for Fashion, Luxury Management, Culinary Arts and Hospitality.  
-    Italy is a leader in Architecture, Design, Fine Arts and Music.  
-    The Netherlands and Scandinavia specialise in Renewable Energy, Psychology and Game Design.
-  </p>
-
-  <h2>Study in the Middle East (UAE, Qatar, Saudi Arabia)</h2>
-  <p>
-    Fast-growing education hubs offering excellent programs in Aviation, Business, Event Management, 
-    IT, Sports, Hospitality, Cosmetology, Hair Styling, Digital Marketing and Healthcare.  
-    Top universities offer modern facilities and globally recognized qualifications.
-  </p>
-
-  <h2>Popular Offbeat Programs</h2>
+<section>
+  <h2>Request a Callback</h2>
+  <p>To help you better, please share the following details:</p>
   <ul>
-    <li>Fashion Design & Luxury Brand Management</li>
-    <li>Hotel Management & Culinary Arts</li>
-    <li>Sports Science & Physiotherapy</li>
-    <li>Game Design, VFX, Animation & Esports</li>
-    <li>Music, Film, Sound Engineering & Performing Arts</li>
-    <li>Architecture, Interior Design & Urban Planning</li>
-    <li>MBBS, Dentistry, Pharmacy & Allied Health Sciences</li>
-    <li>Cosmetology, Hair Styling & Beauty Therapy</li>
-    <li>Aviation, Cabin Crew, Airport Management</li>
-    <li>Marine Science, Environmental Studies, Wildlife Sciences</li>
+    <li>Program (MS, MBA, Fashion, Nursing, MBBS, Hospitality, Sports, Game Design, etc.)</li>
+    <li>Preferred countries</li>
+    <li>Your academic background</li>
+    <li>Your budget & scholarship requirement</li>
+    <li>Preferred intake (Spring/Fall/Winter/Summer)</li>
   </ul>
+  <p>
+    Send the above information to <strong>info@zheveducation.com</strong>  
+    or WhatsApp us for immediate assistance.
+  </p>
 </section>
 
 <!-- TESTIMONIALS -->
@@ -238,16 +223,16 @@
   <h2>Testimonials</h2>
   <div class="grid">
     <div class="card">
-      <strong>Priya K.</strong>
-      <p>"Ireland was the perfect choice for Data Science — very helpful guidance from Zhev Education."</p>
+      <strong>Anjali T.</strong>
+      <p>"Quick response and perfect guidance for my USA applications."</p>
     </div>
     <div class="card">
-      <strong>Rahul D.</strong>
-      <p>"Great support for European hospitality programs — helped me shortlist affordable options."</p>
+      <strong>Karan M.</strong>
+      <p>"Clear visa documentation and mock interview support — very helpful."</p>
     </div>
     <div class="card">
-      <strong>Simran B.</strong>
-      <p>"Italy’s fashion programs were exactly what I wanted — got clarity within minutes!"</p>
+      <strong>Riya S.</strong>
+      <p>"Amazing scholarship support — highly recommended!"</p>
     </div>
   </div>
 </section>
